--- a/AntiOverSpeed/res/layout/main.xml
+++ b/AntiOverSpeed/res/layout/main.xml
@@ -3,18 +3,34 @@
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
-    <TextView android:layout_width="fill_parent"
-        android:id="@+id/title"
-        android:layout_height="wrap_content"
-        android:textSize="30sp"
-        />
+    <LinearLayout 
+	    android:orientation="horizontal"
+	    android:layout_width="fill_parent"
+	    android:layout_height="wrap_content"
+        >
+	    <TextView
+	        android:id="@+id/title"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:textSize="30sp"
+	        android:text="@string/title"
+	        />
+	    <Button
+	        android:id="@+id/add_favorite"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_marginLeft="40dp"
+	        android:text="@string/add_favorite"
+	        />
+    </LinearLayout>
     <TextView android:layout_width="fill_parent"
         android:id="@+id/speed"
         android:layout_height="wrap_content"
         android:textSize="40sp"
         />
-    <TextView android:layout_width="fill_parent"
+    <TextView
         android:id="@+id/position"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:textSize="40sp"
         />
