--- a/SpeedRecorder/res/layout/app_info.xml
+++ b/SpeedRecorder/res/layout/app_info.xml
@@ -4,11 +4,11 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
     <Button
-        android:id="@+id/query_positions"
+        android:id="@+id/query_speeds"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="40dp"
-        android:text="@string/query_positions"
+        android:text="@string/query_speeds"
         />
     <Button
         android:id="@+id/select_time"
