--- a/SpeedRecorder/res/layout/speeds_list.xml
+++ b/SpeedRecorder/res/layout/speeds_list.xml
@@ -3,6 +3,26 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
+    <LinearLayout
+	    android:layout_width="match_parent"
+	    android:layout_height="wrap_content"
+	    android:orientation="horizontal">
+	    <TextView
+	        android:id="@+id/time"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:textSize="30sp"
+	        android:text="@string/header_time"
+	        />
+	    <TextView
+	        android:id="@+id/speed"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_marginLeft="100dp"
+	        android:textSize="30sp"
+	        android:text="@string/header_speed"
+	        />
+    </LinearLayout>
     <ListView
         android:id="@+id/speed_list"
         android:layout_width="match_parent"
