--- a/SpeedRecorder/res/layout/speeds_list.xml
+++ b/SpeedRecorder/res/layout/speeds_list.xml
@@ -7,14 +7,14 @@
 	    android:layout_width="match_parent"
 	    android:layout_height="wrap_content"
 	    android:orientation="horizontal">
-	    <TextView
+	    <Button
 	        android:id="@+id/time"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
 	        android:textSize="30sp"
 	        android:text="@string/header_time"
 	        />
-	    <TextView
+	    <Button
 	        android:id="@+id/speed"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
