--- a/SpeedRecorder/res/layout/time_select.xml
+++ b/SpeedRecorder/res/layout/time_select.xml
@@ -6,13 +6,12 @@
     <LinearLayout 
 	    android:layout_width="fill_parent"
 	    android:layout_height="wrap_content"
-	    android:orientation="horizontal"
+	    android:orientation="vertical"
 	    >
 	    <TextView
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
-	        android:layout_gravity="center_vertical"
-	        android:textSize="30sp"
+	        android:layout_gravity="center_horizontal"
 	        android:text="@string/select_date"
 	        />
 	    <DatePicker android:id="@+id/datePicker" 
@@ -35,7 +34,6 @@
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
 	        android:layout_gravity="center_vertical"
-	        android:textSize="30sp"
 	        android:text="@string/select_start_time"
 	        />
 	    <TimePicker android:id="@+id/timePicker" 
@@ -58,7 +56,6 @@
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
 	        android:layout_gravity="center_vertical"
-	        android:textSize="30sp"
 	        android:text="@string/select_end_time"
 	        />
 	    <TimePicker android:id="@+id/endTimePicker" 
