--- a/SpeedRecorder/res/layout/app_info.xml
+++ b/SpeedRecorder/res/layout/app_info.xml
@@ -31,4 +31,11 @@
         android:layout_marginLeft="40dp"
         android:text="@string/export_db"
         />
+    <Button 
+        android:id="@+id/exit"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="40dp"
+        android:text="@string/exit"
+        />
 </LinearLayout>
